--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ logging.pattern.console=%d{HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 # Muestra los logging personalizados
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.ucv.mcastillocho.asi=DEBUG
+
+spring.ai.openai.api-key={REEMPLAZAR-API-KEY}
